# learning

./: .gitignore  .gitmodules  LICENSE  README.md  remove_venv.py
BME/Demokratikus_sakk/: README.md
BME/Demokratikus_sakk/Dem sakk/: Dem sakk.vcxproj  Dem sakk.vcxproj.filters.txt  board.cpp  board.h  field.cpp  field.h  graphics.cpp  linked_list.h
BME/Demokratikus_sakk/Dokumentumok/: Spec. + Terv.doc
BME/PolarSurvivor/: README.md
BME/PolarSurvivor/Test/: deleteLogs.bat  run.bat  runTests.bat  test1.txt  test10.txt  test10Log.txt  test11.txt  test11Log.txt  test12.txt  test12Log.txt  test13.txt  test13Log.txt  test14.txt  test14Log.txt  test15.txt  test16.txt  test17.txt  test18.txt  test19.txt  test1Log.txt  test2.txt  test20.txt  test21.txt  test22.txt  test23.txt  test24.txt  test25.txt  (+16 more)
BME/hexxaggon_c/: CMakeLists.txt  Editor.pdn  Hex_menu.pdn  Hexxagon.cbp  Hexxagon.depend  Hexxagon.layout  Hexxagon.layout.save-failed  README.md  dontetlen.pdn  hexxagon_control.c  hexxagon_control.h  hexxagon_graphics.c  hexxagon_graphics.h  jatek_hatter.pdn  keknyer.pdn  main.c  pirosnyer.pdn
BME/hexxagon_java/: README.md
ELTE/imperativ_programozas/: a.out  something.c
ELTE/konkurens_programozas/: Program.java  run.sh
own/canvas_scraper/: 7__Kétszemélyes_játékok.json  8__Evolúciós_algoritmusok.json  9__Automatikus_következtetés.json  canvas_scraper.py  requirements.txt
own/cpp_projects/employee_management/src/: CMakeLists.txt  Company.cpp  Company.hpp  Department.cpp  Department.hpp  Employee.cpp  Employee.hpp  Job.hpp  main.cpp
own/openmodelica/: pipes.mo
(+437 files in other folders)
